--- a/TheEntertainer/Components/ErrorModal.razor
+++ b/TheEntertainer/Components/ErrorModal.razor
@@ -17,7 +17,7 @@
     }
 }
 
-<div class="modal" @onclick="HideModal" style="display: @(IsVisible ? "block" : "block")">
+<div class="modal" @onclick="HideModal" style="display: @(IsVisible ? "block" : "none")">
     <div class="modal-content">
         <div class="modal-header">
             <h2>Error</h2>
