--- a/TheEntertainer/Pages/QRCode.razor
+++ b/TheEntertainer/Pages/QRCode.razor
@@ -1,7 +1,7 @@
 ﻿@page "/qrcode"
 
 @using System.Globalization
-@using Entertainer.Services
+@using BeatBallot.Services
 @using QRCoder
 @inject IConfiguration Configuration
 @inject ILogger<SpotifyService> Logger;
