--- a/TheEntertainer/Pages/_Host.cshtml
+++ b/TheEntertainer/Pages/_Host.cshtml
@@ -1,6 +1,8 @@
 ﻿@page "/"
+@using BeatBallot.Web
 @using Microsoft.AspNetCore.Components.Web
-@namespace TheEntertainer.Pages
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@namespace BeatBallot.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -12,7 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="TheEntertainer.styles.css" rel="stylesheet" />
+    <link href="BeatBallot.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
