--- a/TheEntertainer/_Imports.razor
+++ b/TheEntertainer/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using TheEntertainer
-@using TheEntertainer.Shared
+@using BeatBallot.Web
+@using BeatBallot.Web.Shared
